--- a/hort_parts/static/css/main.css
+++ b/hort_parts/static/css/main.css
@@ -2085,6 +2085,48 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     margin-top: 6rem;
 }
 
+#products .intro-wrap {
+    padding: 15rem 0 21rem;
+    background: #111111;
+}
+
+#products .section-intro h3 {
+    color: rgba(242, 242, 242, 0.5);
+}
+
+#products .section-intro h1 {
+    color: #FFFFFF;
+}
+
+#products .section-intro .lead {
+    color: rgba(242, 242, 242, 0.4);
+}
+
+#products .portfolio-content {
+    margin-top: -22.2rem;
+}
+
+#products .bricks-wrapper:before,
+#products .bricks-wrapper:after {
+    content: "";
+    display: table;
+}
+
+#products .bricks-wrapper:after {
+    clear: both;
+}
+
+#products .bricks-wrapper .brick {
+    float: left;
+    width: 50%;
+    padding: 0;
+    margin: 0;
+}
+
+#products .bricks-wrapper .brick:nth-child(2n+1) {
+    clear: both;
+}
+
 /* -------------------------------------------------------------------
  * responsive:
  * products
@@ -2308,6 +2350,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  *  13. portfolio - (_layout.scss)
  *
  * ------------------------------------------------------------------- */
+
 #download {
     background: #FFFFFF;
     min-height: 800px;
