--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -405,7 +405,7 @@
     </div>
 
     <div class="row portfolio-content">
-        <div class="col-four">
+        <div class="col-twelve">
             <div id="folio-wrap" class="bricks-wrapper">
 
                 <div class="brick folio-item">
@@ -414,7 +414,7 @@
                         <a href="shockabsorber/" class="overlay">
                             <img src="{% static 'images/catalog/absorber2.png' %}">
                             <div class="item-text">
-	                     	<span class="folio-types">HORT PARTS</span>
+                                <span class="folio-types">HORT PARTS</span>
                                 <h3 class="folio-title">{% trans 'SHOCK ABSORBERS' %}</h3>
                             </div>
                         </a>
@@ -427,7 +427,7 @@
                         <a href="thermostat/" class="overlay">
                             <img src="{% static 'images/catalog/thermostat_1.png' %}">
                             <div class="item-text">
-	                     	<span class="folio-types">HORT PARTS</span>
+                                <span class="folio-types">HORT PARTS</span>
                                 <h3 class="folio-title">{% trans 'THERMOSTAT' %}</h3>
                             </div>
                         </a>
