--- a/hort_parts/templates/hort_parts/main.html
+++ b/hort_parts/templates/hort_parts/main.html
@@ -14,9 +14,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vendor.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/grid.css' %}">
     <link rel="stylesheet" href="{% static 'css/flag-icon.css' %}">
 
 </head>
@@ -33,6 +31,7 @@
 <script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/main_2.js' %}"></script>
 
 </body>
 </html>
