--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -93,7 +93,7 @@
         <div class="col-full">
             <div class="about-profile-bg"></div>
             <div class="intro">
-                <h3 class="animate-this">{% trans 'Products' %}</h3>
+                <h2 class="animate-this">{% trans 'Products' %}</h2>
             </div>
 
             <div class="row row-no-gutter">
@@ -418,6 +418,9 @@
                                 <h3 class="folio-title">{% trans 'SHOCK ABSORBERS' %}</h3>
                             </div>
                         </a>
+                        <a href="shockabsorber/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
                     </div>
                 </div>
 
@@ -430,6 +433,9 @@
                                 <span class="folio-types">HORT PARTS</span>
                                 <h3 class="folio-title">{% trans 'THERMOSTAT' %}</h3>
                             </div>
+                        </a>
+                        <a href="thermostat/" class="details-link" title="details">
+                            <i class="icon-link"></i>
                         </a>
                     </div>
                 </div>
