--- a/hort_parts/static/css/main.css
+++ b/hort_parts/static/css/main.css
@@ -2461,7 +2461,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 
 .bricks-wrapper .item-wrap .overlay::after {
-    content: "...";
+    content: "";
     font-family: georgia, serif;
     font-size: 3rem;
     z-index: 1;
