--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -96,123 +96,6 @@
                 <h2 class="animate-this">{% trans 'Products' %}</h2>
             </div>
 
-            <div class="row row-no-gutter">
-                <div class="resp-tabs" style="display: block; width: 100%;">
-                    <div class="resp-tabs-container">
-
-                        <div class="gallery resp-tab-content resp-tab-content-active" aria-labelledby="tab_item-0"
-                             style="display:block">
-                            <!--gallery-->
-                            <div class="col-md-4 col-sm-12 border-right">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/provod_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'HIGH-VOLTAGE WIRES' %}</span>
-                                            </p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/gas_stops_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'GAS SPRINGS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                            </div>
-
-                            <div class="col-md-4 col-sm-12 border-right">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/balljoint_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'BALL JOINTS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/patrub_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'BRANCH PIPES' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/controlarm_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'CONTROL ARMS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                            </div>
-
-                            <div class="col-md-4 col-sm-12">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb "
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/nerzav_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name">
-                                                <span>{% trans 'STAINLESS STEEL FITTINGS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb "
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/pruguna_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'SUSPENSION SPRINGS' %}</span>
-                                            </p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
 
             <div class="row row-no-gutter">
                 <div class="resp-tabs" style="display: block; width: 100%;">
@@ -433,6 +316,118 @@
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
                                 <h3 class="folio-title">{% trans 'BELT' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/provod_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/provod_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/gas_stops_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/gas_stops_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'GAS SPRINGS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/balljoint_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/balljoint_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'BALL JOINTS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/patrub_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/patrub_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'BRANCH PIPES' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/controlarm_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/controlarm_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'CONTROL ARMS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/nerzav_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/nerzav_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'STAINLESS STEEL FITTINGS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/pruguna_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/pruguna_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'SUSPENSION SPRINGS' %}</h3>
                             </div>
                         </a>
                         <a href="belt/" class="details-link" title="details">
